--- a/styles.css
+++ b/styles.css
@@ -100,8 +100,10 @@ header {
   font-size: 1rem;
   line-height: 1.5;
   margin-bottom: 2rem;
-  color: #aaa;
+  color: #757575;
 }
+
+/* --- Botton ---*/
 .btn-modern {
   display: inline-block;
   margin: 0 auto;
@@ -113,7 +115,9 @@ header {
   border: 1px solid #0d6efd;
   color: #0d6efd;
   border-radius: 50px;
-  padding: 6px 12px;
+  padding: 14px;      
+  min-width: 125px; 
+
 }
 .btn-outline-primary.btn-modern::before {
   content: "";
@@ -258,13 +262,14 @@ header {
 }
 .project-card img {
   width: 100%;
-  height: auto;
+  height: 450px;          
+  object-fit: cover;      
   display: block;
 }
 .project-title {
-  padding: 1rem;
+  padding: 1.2rem;
   font-family: 'Instrument Serif', serif;
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   text-align: center;
   display: block;       
 }
@@ -287,6 +292,16 @@ header {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
 
   cursor: pointer;
+}
+
+.project-card .project-link .project-title {
+  color: #222;
+}
+
+.project-card .project-link:visited .project-title,
+.project-card .project-link:active .project-title,
+.project-card .project-link:hover .project-title {
+  color: #222;
 }
 
 
@@ -352,4 +367,8 @@ header {
     font-size: 1rem;
     margin-bottom: 1rem;
   }
+}
+
+.project-text {
+color: #757575;
 }
