--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body {
   header .header-inner {
     padding: 0.8rem 1rem;    
     justify-content: center; 
-    gap: 12rem;              
+    gap: auto;              
   }
 }
 
